<resources>
    <string name="app_name">KnowYourGovernment</string>
    <string name="about">about</string>
    <string name="location">location</string>
    <string name="title">Know Your Government</string>
    <string name="name">\@2017, Pranitha Nagavelli</string>
    <string name="version">Version 1.0</string>
    <string name="Address">Address :</string>
    <string name="Pnone">Phone :</string>
    <string name="Email">Email :</string>
    <string name="Website">Website :</string>
    <string name="NoData">No Data Provided</string>
    <string name="Network">No Data for Location</string>
</resources>
