<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:ignore="GradleDependency">

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:background="@android:color/holo_purple"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/office"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/office" />

    <TextView
        android:id="@+id/party"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:text="@string/Address"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/Address"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/Pnone"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/Website"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/url"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/textView13"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="googlePlusClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/googleplus"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:id="@+id/fb"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="facebookClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/google"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/facebook"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="67dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="twitterClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fb"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/twitter"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:id="@+id/youtube"
        android:layout_width="62dp"
        android:layout_height="81dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="youTubeClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintLeft_toRightOf="@+id/twitter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@drawable/youtube"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="photoClicked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party"
        app:srcCompat="@drawable/missingimage"
        tools:ignore="ContentDescription" />


</android.support.constraint.ConstraintLayout>